--- a/src/assets/css/HomeTea_tourism.css
+++ b/src/assets/css/HomeTea_tourism.css
@@ -44,7 +44,7 @@
 }
 
 .card-group .card {
-  
+
   border: none;
 }
 
@@ -239,6 +239,8 @@
   transform: translateY(-6px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
   filter: brightness(90%);
+  transition: transform 0.3s ease;
+
 }
 
 
