--- a/src/assets/css/HomeTea_tourism.css
+++ b/src/assets/css/HomeTea_tourism.css
@@ -1,3 +1,12 @@
+.home-pageNG{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 1.5rem;
+  color: #666;
+}
+
 /* --------------------------------------------------
    🟩 輪播設定
 -------------------------------------------------- */
