--- a/src/assets/css/knowledge.css
+++ b/src/assets/css/knowledge.css
@@ -1,3 +1,11 @@
+.home-pageNG{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 1.5rem;
+  color: #666;
+}
 /* === 全頁排版調整，避免左右滑動 === */
 html,
 body {
